--- a/Softwares.html
+++ b/Softwares.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
 
@@ -19,12 +19,9 @@
       <table class="table" id="tabla">
         <thead class="thead-inverse">
           <tr>
-            <th>Titulo</th>
-            <th>Director</th>
-            <th>Genero</th>
-            <th>Pais</th>
-            <th>Año</th>
-            <th>Duracion</th>
+            <th>Software</th>
+            <th>Empresa</th>
+            <th>Usuario</th>
           </tr>
         </thead>
       </table>
