--- a/Softwares.html
+++ b/Softwares.html
@@ -47,7 +47,7 @@
       function agregar(){
         basedatos.push(sujeto)
         console.log(basedatos);
-        document.getElementById("tabla").innerHTML += '<tbody><td>'+sujeto.Titulo+'</td><td>'+sujeto.Director+'</td><td>'+sujeto.Genero+'</td><td>'+sujeto.Pais+'</td><td>'+sujeto.año+'</td><td>'+sujeto.Duracion+'</td></tbody>';
+        document.getElementById("tabla").innerHTML += '<tbody><td>'+sujeto.Software+'</td><td>'+sujeto.Empresa+'</td><td>'+sujeto.Usario+'</td></tbody>';
       };
     </script>
 
