--- a/Softwares.html
+++ b/Softwares.html
@@ -30,6 +30,10 @@
     <script >
       function capturar(){
         console.log("capturado");
+        function Persona(Software, Empresa, Usuario){
+          this.Software=Software;
+          this.Empresa=Empresa;
+          this.Usuario=Usuario
         }
         var capturarSoftware=document.getElementById("Software").value;
         console.log(capturarSoftware);
