--- a/Softwares.html
+++ b/Softwares.html
@@ -28,7 +28,7 @@
 
 </div>
     <script >
-      function capturar(){
+      function capturar(Software, Empresa, Usuario){
         console.log("capturado");
         this.Software=Software
         this.Empresa=Empresa
