--- a/Softwares.html
+++ b/Softwares.html
@@ -9,9 +9,9 @@
     <div class="container py-2">
     <p class="lead">Ingresa Info de Software</p>
     <form >
-      <input id="Titulo" type="text" placeholder="Ingresa el Software" class="form-control my-2">
-      <input id="Director" type="text" placeholder="Ingresa la Empresa del Software" class="form-control my-2">
-      <input id="Genero" type="text" placeholder="Ingresa el Usuario" class="form-control my-2">
+      <input id="Software" type="text" placeholder="Ingresa el Software" class="form-control my-2">
+      <input id="Empresa" type="text" placeholder="Ingresa la Empresa del Software" class="form-control my-2">
+      <input id="Usuario" type="text" placeholder="Ingresa el Usuario" class="form-control my-2">
       <button id="boton" type="reset" onclick="capturar();"  class="btn bnt-success">agregar</button>
     </form>
     </div>
@@ -28,30 +28,29 @@
 
 </div>
     <script >
-      function capturar(Software, Empresa, Usuario){
-        console.log("capturado");
-        this.Software=Software
-        this.Empresa=Empresa
-        this.Usuario=Usuario
-    
-
+      function capturar(){
+        function Software(nombre, empresa, usuario){
+          this.nombre=nombre
+          this.empresa=empresa
+          this.usuario=usuario
+        }
         var capturarSoftware=document.getElementById("Software").value;
         console.log(capturarSoftware);
         var capturarEmpresa=document.getElementById("Empresa").value;
         console.log(capturarEmpresa);
         var capturarUsuario=document.getElementById("Usuario").value;
-        console.log(capturarUsuario);;
+        console.log(capturarUsuario);
         //var suejeto= new Persona("Kurt", 27); //captura estatica
         // varialble local var sujeto= new Persona(capturarnombre, capturaredad);
-        sujeto= new Softwares(capturarSoftware, capturarEmpresa, capturarUsuario);//variable global
-        //console.log(sujeto);
+        sujeto= new Software(capturarSoftware, capturarEmpresa, capturarUsuario);//variable global
+        console.log(sujeto);
         agregar();
       }
       var basedatos=[];
       function agregar(){
         basedatos.push(sujeto)
         console.log(basedatos);
-        document.getElementById("tabla").innerHTML += '<tbody><td>'+sujeto.Software+'</td><td>'+sujeto.Empresa+'</td><td>'+sujeto.Usuario+'</td></tbody>';
+        document.getElementById("tabla").innerHTML += '<tbody><td>'+sujeto.nombre+'</td><td>'+sujeto.empresa+'</td><td>'+sujeto.usuario+'</td></tbody>';
       };
     </script>
   </body>
